# Canny-Edge-GPU

./: CannyEdgeDetection.kdev4  README.md  meson.build  wget-log
lib/HDF5/: DataType.cpp  DataType.hpp  Matlab.hpp  Type.hpp
src/: canny.cl  main.cpp
